--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,11 @@
 .calculator-display {
   width: 100%;
   min-height: 80px;
-  background-color: #f0f0f0;
+  font-size: 3rem;
+  color: white;
+  background-color: #555555;
   padding: 15px;
-  border-radius: 5px;
+  border-radius: 9px;
   margin-bottom: 20px;
   /* Stack the operands */
   display: flex;
@@ -42,10 +44,10 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Anonymous Pro", sans-serif;
   line-height: 1.6;
   color: #333;
-  background-color: #f9f9f9;
+  background-color: dimgray;
 }
 
 main, footer {
@@ -64,7 +66,7 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #fff;
+  background-color: #444;
   padding: 2em;
   min-width: 300px;     /* Common width for most calculators */
   min-height: 450px;    /* Good height for buttons and display */
@@ -74,12 +76,30 @@ section {
   margin: 0 auto;
   /*margin-bottom: 20px;*/
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 9px
+}
+
+button[data-value='0'] {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 50px;
+  min-width: 50px;
+  height: 50px;
+  width: 50px;
+  margin: auto auto auto;
+  border-radius: 5px;
+}
+
+button[data-value='='], button[data-value='C'] {
+  margin: 10px;
 }
 
 button {
   min-height: 50px;
   min-width: 50px;
-  border-radius: 5px;
+  border-radius: 7px;
+  font-size: 2rem;
 }
 
 .operations {
