--- a/styles.css
+++ b/styles.css
@@ -1,135 +1,177 @@
 /* Global Styles */
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 @media screen and (max-width: 480px) {
-  .calculator {
-    min-width: 280px;    /* Slightly smaller on mobile */
-    min-height: 400px;
-  }
+    .calculator {
+        min-width: 280px; /* Slightly smaller on mobile */
+        min-height: 400px;
+    }
 
-  .calculator-button {
-    min-height: 50px;    /* Slightly smaller buttons on mobile */
-  }
+    .calculator-button {
+        min-height: 50px; /* Slightly smaller buttons on mobile */
+    }
 }
 
 .calculator-display {
-  width: 100%;
-  min-height: 80px;
-  font-size: 3rem;
-  color: white;
-  background-color: #555555;
-  padding: 15px;
-  border-radius: 9px;
-  margin-bottom: 20px;
-  /* Stack the operands */
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-around;
+    width: 100%;
+    min-height: 80px;
+    font-size: 3rem;
+    color: white;
+    background-color: #555555;
+    padding: 15px;
+    border-radius: 9px;
+    margin-bottom: 20px;
+    /* Stack the operands */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
 }
 
 .previous-operand {
-  font-size: 1.2rem;
-  color: rgba(0, 0, 0, 0.75);
+    font-size: 1.2rem;
+    color: rgba(0, 0, 0, 0.75);
 }
 
 .current-operand {
-  font-size: 2.5rem;
-  color: #000;
+    font-size: 2.5rem;
+    color: #000;
 }
 
 body {
-  font-family: "Anonymous Pro", sans-serif;
-  line-height: 1.6;
-  color: #333;
-  background-color: dimgray;
+    font-family: "Anonymous Pro", sans-serif;
+    line-height: 1.6;
+    color: #333;
+    background-color: dimgray;
 }
 
 main, footer {
-  display: block;
+    display: block;
 }
 
 main {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 2em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 2em;
 }
 
 section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: #444;
-  padding: 2em;
-  min-width: 300px;     /* Common width for most calculators */
-  min-height: 450px;    /* Good height for buttons and display */
-  max-width: 400px;     /* Prevents calculator from getting too wide */
-  /*padding: 20px;*/
-  /* Optional: center the calculator */
-  margin: 0 auto;
-  /*margin-bottom: 20px;*/
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 9px
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #444;
+    padding: 2em;
+    min-width: 300px; /* Common width for most calculators */
+    min-height: 450px; /* Good height for buttons and display */
+    max-width: 400px; /* Prevents calculator from getting too wide */
+    /*padding: 20px;*/
+    /* Optional: center the calculator */
+    margin: 0 auto;
+    /*margin-bottom: 20px;*/
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 9px
+}
+.bottom-buttons, .last-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    max-height: 50px;
+}
+.bottom-buttons button, .last-buttons button {
+    flex: 1;
+    margin: 10px;
+
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*min-height: 50px;*/
+    /*min-width: 50px;*/
+    height: 50px;
+    width: 50px;
+    /*margin: auto auto auto;*/
+    border-radius: 5px;
 }
 
-button[data-value='0'] {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 50px;
-  min-width: 50px;
-  height: 50px;
-  width: 50px;
-  margin: auto auto auto;
-  border-radius: 5px;
+#backspace {
+    background-color: #333;
+    color: #fff;
 }
 
 button[data-value='='], button[data-value='C'] {
-  margin: 10px;
+    margin: 10px;
 }
 
 button {
-  min-height: 50px;
-  min-width: 50px;
-  border-radius: 7px;
-  font-size: 2rem;
+    min-height: 50px;
+    min-width: 50px;
+    border-radius: 7px;
+    font-size: 2rem;
+    cursor: pointer;
 }
 
+/*#backspace {*/
+/*    background-color: #333;*/
+/*    color: #fff;*/
+/*    margin: 10px auto;*/
+/*    min-height: 50px;*/
+/*    min-width: 50px;*/
+/*    border-radius: 7px;*/
+/*    font-size: 2rem;*/
+/*    border: none;*/
+/*    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
+/*    cursor: pointer;*/
+/*    max-width: 50px;*/
+/*    max-height: 50px;*/
+/*}*/
+
 .operations {
-display: flex;
-justify-content: space-evenly;
+    display: flex;
+    justify-content: space-evenly;
 }
+.operations button {
+    flex: 1;
+    margin: 5px;
+    height: 50px;
+    width: 50px;
+    /*margin: auto auto auto;*/
+    border-radius: 5px;
+    background-color: orange;
+}
+
 .digits {
-display: flex;
-flex-direction: row;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
-#sevenDigits, #fourDigits, #oneDigits  {
-  display: flex;
-  justify-content: space-evenly;
+
+#sevenDigits, #fourDigits, #oneDigits {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 h1 {
-  font-size: 24px;
-  margin-bottom: 10px;
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
 p {
- color: black;
-  min-height: 80px;    /* Space for input and results */
-  margin-bottom: 20px;
+    color: black;
+    min-height: 80px; /* Space for input and results */
+    margin-bottom: 20px;
 }
 
 footer {
-  background-color: #333;
-  color: #fff;
-  padding: 1em;
-  text-align: center;
-  clear: both;
+    background-color: #333;
+    color: #fff;
+    padding: 1em;
+    text-align: center;
+    clear: both;
 }
